Updated About Info

--- a/popup.html
+++ b/popup.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Password Generator</h1>
+  <h1>SecurePass Generator</h1>
   <label for="length">Password Length: <span id="lengthValue">12</span></label>
   <input type="range" id="length" min="4" max="32" value="12" step="1">
   <br>
@@ -15,10 +15,8 @@
   <button id="copy">Copy</button>
   <br>
   <div id="developer-info">
-    <h2>Contact Developer</h2>
-    <p>For support or inquiries, you can reach out to us:</p>
-    <p>Email: <a href="mailto:adjooy@gmail.com">your.email@example.com</a></p>
-    <p>Instagram: <a href="https://instagram.com/adjooy" target="_blank">@YourInstagramHandle</a></p>
+    <p>If you have any questions or need support,</p>
+    <button id="contact-button">Contact Me</button>
   </div>
   <script src="popup.js"></script>
 </body>
