added automatic showing password on icon click

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
 <body>
   <h1>SecurePass Generator</h1>
   <label for="length">Password Length: <span id="lengthValue">12</span></label>
-  <input type="range" id="length" min="4" max="32" value="12" step="1">
+  <input type="range" id="length" min="4" max="32" value="12" step="1" disabled>
   <br>
   <button id="generate">Generate Password</button>
   <br>
