--- a/popup.html
+++ b/popup.html
@@ -5,18 +5,18 @@
 </head>
 <body>
   <h1>SecurePass Generator</h1>
-  <label for="length">Password Length: <span id="lengthValue">12</span></label>
-  <input type="range" id="length" min="4" max="32" value="12" step="1" disabled>
-  <br>
-  <button id="generate">Generate Password</button>
-  <br>
   <textarea id="password" readonly></textarea>
   <br>
   <button id="copy">Copy</button>
   <br>
+  <label for="length">Password Length: <span id="lengthValue">12</span></label>
+  <input type="range" id="length" min="6" max="50" value="12" step="1">
+  <br>
+  <button id="generate">Generate New Password</button>
+  <br>
   <div id="developer-info">
-    <p>If you have any questions or need support,</p>
-    <button id="contact-button">Contact Me</button>
+    <p>If you have any questions or need support</p>
+    <button id="contact-button" onclick="window.open('https://mail.google.com/mail/?view=cm&fs=1&to=adjooy@gmail.com', '_blank');">Contact Me</button>
   </div>
   <script src="popup.js"></script>
 </body>
